2011-12-04  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_qquote_error, op_unquote_error): New static functions.
	(expand_qquote): Bugfix: missing case added to handle directly quoted
	quasiquote.
	(eval_init): Error-catching pseudo-operators registered in
	op_table.

	* parser.y (force_regular_quotes): New function.
	(list): Quotes within unquotes and splices are regular.

	* txr.1: Clarified new rules. Removed description of ,'form and ,*'form
	special syntax.

2011-12-03  Kaz Kylheku  <kaz@kylheku.com>

	Expose lazy lists in TXR Lisp.

	* eval.c (eval_init): New intrinsic functions.

	* lib.c (rplaca, rplacd, lcons_fun): New functions.
	(make_lazycons): Renamed to make_lazy_cons, relocated
	and turned into external function.
	(lazy_stream_func, lazy_stream_cons): Follow rename
	of make_lazycons.

	* lib.h (rplaca, rplacd, make_lazy_cons, lcons_fun): 
	Declared.

	* txr.1: Stub sections created.

2011-12-03  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (uw_protect_s, return_s, return_from_s): New symbol
	variables.
	(op_unwind_protect, op_block, op_return, op_return_from): 
	New static functions.
	(expand): Removed case for call, if, and, and or. These operators
	evaluate all their arguments, so the code walker can treat them
	as a function calls.
	Added case for block and return-from.
	(eval_init): New symbols interned.  New operator functions
	registered in op_table.

	* txr.1: Blank sections added.

2011-12-03  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (split_str, split_str_set): Bugfix: access beyond the end of
	the input string.

2011-12-03  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): String and character functions
	exposed as intrinsics.

	* txr.1: Blank sections created.

2011-12-02  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Added stub sections for new functions.

2011-12-02  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c: Symbol related intrinsic functions and variables made
	available:

	* lib.h (sym_name): Dangling declaration removed.
